2002-11-05  Vincent Untz  <vincent@vuntz.net>

	* ballot-summary.html: new candidates.

2002-11-04  Vincent Untz  <vincent@vuntz.net>

	* ballot-summary.html: we have 11 candidates now. Fixed two typos.

2002-11-03  Vincent Untz  <vincent@vuntz.net>

	* ballot-summary.html: another candidate.

2002-11-03  Vincent Untz  <vincent@vuntz.net>

	* ballot-summary.html: three new candidates.

2002-10-30  Vincent Untz  <vincent@vuntz.net>

	* ballot-summary.html: third candidate.

2002-10-30  Vincent Untz  <vincent@vuntz.net>

	* ballot-summary.html: first two candidates.

2002-10-29  Glynn Foster  <glynn.foster@sun.com>

	* elections.html: Remove reference to 2001, since it's the
	2002 rules and timelines.

2002-10-23  Vincent Untz  <vincent@vuntz.net>

	* gnome.jpg: new foot logo
	* gnome2.jpg
	* gnome.png: removed old logo
	* *.html: removed height and width for the logo

2002-10-13  Vincent Untz  <vincent@vuntz.net>

	* *: s/membership@gnome.org/membership-committee@gnome.org/g
	* elections.html
	* ballot-summary-2001.html
	* board_of_directors-2001.html
	* election-2001.html
	* electionrules-2001.html: archives of 2001 elections
	* ballot-summary.html
	* electionrules.html
	* overview.html: first update for the 2002 elections
	
2002-09-24  Steve Fox <drfickle@k-lug.org>

	* index.html: Update the news
	* documentation.html: Add by-laws
	* bylaws.pdf: by-laws doc

2002-09-19  Glynn Foster  <glynn.foster@sun.com>

	* membership-form.php: Update mail address for new committee.

2002-09-01  Vincent Untz  <vincent@vuntz.net>

	* membership-form.php: made it strip the slashes before the quotes.

2002-08-31  Mike Newman  <mike@gtnorthern.demon.co.uk>

	* membership-policy.html: Fixed to reflect current renewal process.
	* membership-form.html: Made the URL in the mailout work :)
	* index.html: Update the news.

2002-08-19  Mike Newman  <mike@gtnorthern.demon.co.uk>

	* cgi-bin/membership-form-handler.cgi: