@@ -276,6 +276,13 @@ Full statement at <a href="http://mail.gnome.org/archives/foundation-announce/20
 
 <P>15. JONATHAN BLANDFORD<br />
 &quot;
+I started working on GNOME in 1997, and have been actively a part of it
+since.  I initially wrote the AisleRiot solitaire program which appeared
+in GNOME 0.13.  Since then, I've worked on several GNOME projects
+including GTK+, control-center, gmc, nautilus, gnome-libs, and most
+importantly, gfloppy.  I also do a number of sysadmin tasks, and help
+with the running of the gnome.org boxes.  I am a current member of the
+board.
 &quot;<br />
 Affiliation: Red Hat.<br />
 Full statement at <a href="http://mail.gnome.org/archives/foundation-announce/2002-November/msg00013.html">http://mail.gnome.org/archives/foundation-announce/2002-November/msg00013.html</a>
