@@ -1,5 +1,9 @@
 2002-11-05  Vincent Untz  <vincent@vuntz.net>
 
+	* ballot-summary.html: updated Jonathan's summary.
+
+2002-11-05  Vincent Untz  <vincent@vuntz.net>
+
 	* ballot-summary.html: new candidates.
 
 2002-11-04  Vincent Untz  <vincent@vuntz.net>
